# vqa

./: .gitignore  README.md  pyproject.toml
data/: README.md
src/tb_explain/: __init__.py  adapter.py  anatomy.py  inference.py  schema.py
src/tb_explain/dataset/: __init__.py
src/tb_explain/evaluation/: __init__.py
src/tb_explain/training/: __init__.py
